--- a/frontend/election-dashboard/package.json
+++ b/frontend/election-dashboard/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "vue": "^2.6.14",
-    "vue-chartjs": "^5.3.2"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
