--- a/frontend/election-dashboard/package.json
+++ b/frontend/election-dashboard/package.json
@@ -12,6 +12,8 @@
     "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
+    "sweetalert2": "^11.19.1",
+    "tailwind": "^4.0.0",
     "vue": "^2.6.14",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^3.6.5"
