--- a/frontend/election-dashboard/package.json
+++ b/frontend/election-dashboard/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "sweetalert2": "^11.19.1",
